--- a/source/_posts/双系统安装与简单配置.md
+++ b/source/_posts/双系统安装与简单配置.md
@@ -53,11 +53,13 @@ https://zhuanlan.zhihu.com/p/617640635
 
 补充：
 
-`Clash for Windows`可以用[Clash Verge](https://github.com/zzzgydi/clash-verge/releases/tag/v1.3.8)代替![2023-11-07_12-26](双系统安装与简单配置.assets/2023-11-07_12-26.png)
+`Clash for Windows`可以用[Clash Verge](https://github.com/zzzgydi/clash-verge/releases/tag/v1.3.8)代替
+
+<img src="https://onedrive.live.com/embed?resid=FBD44A0636A4242E%212659&authkey=%21ANiKrfTOh3bHFkY&width=1918&height=1036" width="1918" height="" />
 
 系统代理设置这里和`Clash for windows`一致
 
-![2023-11-07_12-34](双系统安装与简单配置.assets/2023-11-07_12-34.png)
+<img src="https://onedrive.live.com/embed?resid=FBD44A0636A4242E%212661&authkey=%21ANiKrfTOh3bHFkY&width=1290&height=912" width="1290" height="" />
 
 #### `Zsh`配置
 
@@ -70,6 +72,32 @@ https://zhuanlan.zhihu.com/p/617640635
 [oh-my-zsh安装](https://zhuanlan.zhihu.com/p/35283688) 来源于`知乎`的一篇文章
 
 [oh-my-zsh安装](https://www.youtube.com/watch?v=f5bdi7WrIFs) 来源于`Youtube`的一则视频（主）
+
+[p10k字体配置](https://github.com/romkatv/powerlevel10k#meslo-nerd-font-patched-for-powerlevel10k) 来源于`Github`该主题作者的推荐字体（这里的字体很有用，解决了`Arch`图标显示不正常的问题）
+
+官方字体下载，链接里有这四个字体，点击链接下载下来。
+
+<img src="https://onedrive.live.com/embed?resid=FBD44A0636A4242E%212660&authkey=%21ANiKrfTOh3bHFkY&width=1750&height=846" width="1750" height="" />
+
+下载以后鼠标右键安装到系统用户即可（右键选中`ttf`文件有安装选项）
+
+<img src="https://onedrive.live.com/embed?resid=FBD44A0636A4242E%212658&authkey=%21ANiKrfTOh3bHFkY&width=1232&height=764" width="1232" height="" />
+
+字体下载（主要是视频里做的，但是效果不如作者推荐的字体）
+
+```zsh
+sudo pacman -Syu noto-fonts noto-fonts-emoji noto-fonts-extra awesome-terminal-fonts
+```
+
+配置
+
+```zsh
+sudo pacman -Syu zsh
+```
+
+```zsh
+sudo pacman -Syu git
+```
 
 一切之前：
 
@@ -167,5 +195,11 @@ source $ZSH/oh-my-zsh.sh
 
 ```bash
 source .zshrc
+```
+
+重新配置
+
+```zsh
+p10k configure
 ```
 
