--- a/source/_posts/LC005.md
+++ b/source/_posts/LC005.md
@@ -161,3 +161,61 @@ class Solution {
 
 ## 题目解法
 
+### 常规解法
+
+> 主要学习链表相关操作，对链表的处理上模拟正常计算即可
+
+我们这里举例来方便理解，例如`342 + 465 = 807`，我们在计算时先将`2`和`5`相加得到`7`，可以看到我们这里计算时恰好是逆顺计算的，与给出的逆序链表恰好对应，甚至省去了假如位数不同需要对齐的问题，自动末尾对齐了。
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    //传入逆序链表的两个节点
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        //定义链表的头尾为空
+        ListNode head = null, tail = null;
+        //定义进位
+        int carry = 0;
+        //除非两个链表节点都为空，不然循环不会停止
+        while (l1 != null || l2 != null) {
+            //实现在链表节点中取元素，链表不为空直接取元素，链表为空取零（相当于位数少的高于最高有效位的位置0）
+            int n1 = l1 != null ? l1.val : 0;
+            int n2 = l2 != null ? l2.val : 0;
+            //先把本位和进位计算出来。
+            int sum = n1 + n2 + carry;
+            //计算答案的个位，初始化tail和head
+            if (head == null) {
+                head = tail = new ListNode(sum % 10);
+            } else {//计算下一位答案，并将tail后移一位
+                tail.next = new ListNode(sum % 10);
+                tail = tail.next;
+            }
+            //计算进位
+            carry = sum / 10;
+            //把要计算的位移动到下一位
+            if (l1 != null) {
+                l1 = l1.next;
+            }
+            if (l2 != null) {
+                l2 = l2.next;
+            }
+        }
+        //如果最后还有进位，新加一个节点保存进位
+        if (carry > 0) {
+            tail.next = new ListNode(carry);
+        }
+        //返回头节点
+        return head;
+    }
+}
+```
+
