--- a/source/_posts/LC005.md
+++ b/source/_posts/LC005.md
@@ -178,44 +178,114 @@ class Solution {
  *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
  * }
  */
-class Solution {
-    //传入逆序链表的两个节点
-    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
-        //定义链表的头尾为空
-        ListNode head = null, tail = null;
-        //定义进位
+class Solution
+{
+    public ListNode addTwoNumbers(ListNode l1,ListNode l2){
+        ListNode head = null,tail = null;
         int carry = 0;
-        //除非两个链表节点都为空，不然循环不会停止
-        while (l1 != null || l2 != null) {
-            //实现在链表节点中取元素，链表不为空直接取元素，链表为空取零（相当于位数少的高于最高有效位的位置0）
-            int n1 = l1 != null ? l1.val : 0;
-            int n2 = l2 != null ? l2.val : 0;
-            //先把本位和进位计算出来。
+        while(l1 != null || l2 != null){
+            int n1 = l1 != null ? l1.val:0;
+            int n2 = l2 != null ? l2.val:0;
             int sum = n1 + n2 + carry;
-            //计算答案的个位，初始化tail和head
-            if (head == null) {
+            if(head == null){
                 head = tail = new ListNode(sum % 10);
-            } else {//计算下一位答案，并将tail后移一位
-                tail.next = new ListNode(sum % 10);
-                tail = tail.next;
+            }else{
+                tail = tail.next = new ListNode(sum % 10);
             }
-            //计算进位
             carry = sum / 10;
-            //把要计算的位移动到下一位
-            if (l1 != null) {
+            if(l1 != null){
                 l1 = l1.next;
             }
-            if (l2 != null) {
+            if(l2 != null){
                 l2 = l2.next;
             }
         }
-        //如果最后还有进位，新加一个节点保存进位
-        if (carry > 0) {
+        if(carry > 0){
             tail.next = new ListNode(carry);
         }
-        //返回头节点
         return head;
     }
 }
 ```
+
+### Debug
+
+```java
+class Solution
+{
+    public ListNode addTwoNumbers(ListNode l1,ListNode l2){
+        ListNode head = null;
+        ListNode tail = null;
+        int carry = 0;
+        while(l1 != null || l2 != null){
+            int n1 = l1 != null ? l1.val:0;
+            int n2 = l2 != null ? l2.val:0;
+            int sum = n1 + n2 + carry;
+            if(head == null){
+                head = tail = new ListNode(sum % 10);
+                tail = tail.next = null;             
+            }else{
+                tail = new ListNode(sum % 10);
+                tail = tail.next = null;
+            }
+            carry = sum / 10;
+            if(l1 != null){
+                l1 = l1.next;
+            }
+            if(l2 != null){
+                l2 = l2.next;
+            }
+        }
+        if(carry > 0){
+            tail = new ListNode(carry);
+        }
+        return head;
+    }
+}
+```
+
+以上这段代码是错误的，原因是**`tail`是一个指针**，指向当前链表节点，第13行中`tail = tail.next = null; `，仅仅会把`tail`指针置空，而没其他任何效果。因为在`tail = new ListNode(val)`时，默认`tail.next = null`，用来默认当前节点是链表的最后一个元素。所以第二次迭代时，仅仅创建了一个没有和任何链表链接的新节点。正确的做法是在创建新节点后，将 `tail.next` 指向这个新节点，然后再更新 `tail` 指针指向新的末尾节点。这样，每次迭代时，新创建的节点都会被正确地添加到链表的末尾。**只有创建好新节点，`tail.next`才能指向新节点**
+
+# 无重复字符的最长子串
+
+
+## 题目描述
+
+给定一个字符串 `s` ，请你找出其中不含有重复字符的 **最长子串** 的长度。
+
+ 
+
+**示例 1:**
+
+```
+输入: s = "abcabcbb"
+输出: 3 
+解释: 因为无重复字符的最长子串是 "abc"，所以其长度为 3。
+```
+
+**示例 2:**
+
+```
+输入: s = "bbbbb"
+输出: 1
+解释: 因为无重复字符的最长子串是 "b"，所以其长度为 1。
+```
+
+**示例 3:**
+
+```
+输入: s = "pwwkew"
+输出: 3
+解释: 因为无重复字符的最长子串是 "wke"，所以其长度为 3。
+     请注意，你的答案必须是 子串 的长度，"pwke" 是一个子序列，不是子串。
+```
+
+ 
+
+**提示：**
+
+- `0 <= s.length <= 5 * 104`
+- `s` 由英文字母、数字、符号和空格组成
+
+## 题目解法
 
