--- a/source/_posts/LC005.md
+++ b/source/_posts/LC005.md
@@ -289,3 +289,62 @@ class Solution
 
 ## 题目解法
 
+### 滑动窗口
+
+```java
+class Solution{
+    public int lengthOfLongestSubstring(String s) {
+        Set<Character> occ = new HashSet<Character>();
+        int head = 0,tail = 0,n = s.length(),ans = 0;
+        for(;head < n;head++){
+            if(head != 0){
+                occ.remove(s.charAt(head-1));
+            }
+            while(tail < n && !occ.contains(s.charAt(tail))){
+                occ.add(s.charAt(tail));
+                tail++;
+        }
+        ans = Math.max(ans,tail - head);
+        }
+        return ans;
+    }
+}
+
+```
+
+1.注意第 **4** 行中的`length`是方法，不是属性。需要`int n = s.length()`，注意加小括号，这里注意区分**两数之和**处的`int []`类型的`nums`的`length`是属性，并非方法，无需加括号。
+
+2.还有**9**行`occ.contains(s.charAt(tail))`要去找尾巴，别找错了。
+
+```java
+class Solution {
+    public int lengthOfLongestSubstring(String s) {
+        int lens = s.length();
+        if (s==null || s.length()==0){
+            return 0;
+        }
+        int maxLength = 0;
+        //定义一个lookup数组表
+        int[] lookup = new int[128];
+        //将lookup表中元素全部初始化为-1
+        Arrays.fill(lookup, -1);
+        int loc = -1;
+        for (int end = 0;end <lens;end++){
+            //取出元素
+            char ch = s.charAt(end);
+            //lookup中的ch元素，如果不等于-1，说明出现过
+            if (lookup[ch] != -1){
+                //更新loc
+                loc = Math.max(loc, lookup[ch]);
+            }
+            //将ch在look中的值填入end
+            lookup[ch] = end;
+            //maxLength取maxLength和end - loc的最大值，因为maxLength每次都会更新且为当前最大长度
+            //而end - loc表示在当前等于end时的不重复字符的长度。
+            maxLength = Math.max(maxLength, end - loc);
+        }
+        return maxLength;
+    }
+}
+```
+
