--- a/source/_posts/编译原理-一-词法分析.md
+++ b/source/_posts/编译原理-一-词法分析.md
@@ -87,6 +87,35 @@ eg.三的倍数
 
 ## 手撸代码
 
+### 要求
+
+```pl0
+// PL/0 demo
+
+(*
+	This is a multi-line
+	comment
+*)
+
+const limit=10;
+var n, f, test, t1, t2;
+begin
+     n := 0;
+     f := 1;
+     while n # limit do
+     begin
+          n := n + 1;
+          f := f * n;
+     end;
+     test := 1+2-3*4/(5-6)+-7;
+	t1:=test*2;
+	t2:=t1+test;
+     call print;	// print all var
+end.
+```
+
+
+
 ### 预处理
 
 **实验要求：**
@@ -99,30 +128,296 @@ eg.三的倍数
 
 - 多行注释：“(\*”和“\*)”之间内容，具体参见后面示例程序。
 
-**合并实现思路**
+#### 删除注释
 
-写一个`mergeWhitespace`函数，传入的参数为打开的文件描述符,仅仅对文件描述符打开的文件进行读取，读到缓冲区，再从缓冲区写到新文件，返回新文件的文件描述符，新文件命名为`filename.i`。有点类似C#网络应用编程的思路
+代码如下
 
-> 为了和词法分析程序的耦合型，换成了FILE*作为参数的fread函数和fopen函数
+```c
+void removeComments(char *source, char *destination) {
+    int i, j;
+    int len = strlen(source);
+    int inSingleLineComment = 0;
+    int inMultiLineComment = 0;
+
+    for (i = 0, j = 0; i < len; i++) {
+        if (!inSingleLineComment && !inMultiLineComment) {
+            if (source[i] == '/' && source[i + 1] == '/') {
+                inSingleLineComment = 1;
+                i++; // 跳过第二个斜杠
+            } else if (source[i] == '(' && source[i + 1] == '*') {
+                inMultiLineComment = 1;
+                i++; // 跳过第二个星号
+            } else {
+                destination[j++] = source[i];
+            }
+        } else if (inSingleLineComment && source[i] == '\n') {
+            inSingleLineComment = 0;
+        } else if (inMultiLineComment && source[i] == '*' && source[i + 1] == ')') {
+            inMultiLineComment = 0;
+            i++; // 跳过第二个括号
+        }
+    }
+
+    destination[j] = '\0'; // 在目标字符串末尾添加结束符
+}
+```
+
+#### 合并空白符
 
 代码如下：
 
+```c
+void mergeWhitespace(char *source, char *destination) {
+    int i, j;
+    int len = strlen(source);
+    int isWhitespace = 0; // 用于标记前一个字符是否是空白符
+
+    for (i = 0, j = 0; i < len; i++) {
+        if (source[i] == ' ' || source[i] == '\t' || source[i] == '\n' || source[i] == '\r') {
+            if (!isWhitespace) {
+                destination[j++] = ' ';
+                isWhitespace = 1;
+            }
+        } else {
+            destination[j++] = source[i];
+            isWhitespace = 0;
+        }
+    }
+
+    destination[j] = '\0'; // 在目标字符串末尾添加结束符
+}
 ```
-if (currentChar == ' ' || currentChar == '\t' || currentChar == '\n' || currentChar == '\r') {
-                // 如果当前字符是空白符，检查下一个字符是否也是空白符
-                while (i + 1 < bytesRead && (buffer[i + 1] == ' ' || buffer[i + 1] == '\t' || buffer[i + 1] == '\n' || buffer[i + 1] == '\r')) {
-                    i++;  // 跳过相邻的空白符
-                }
-                mergedBuffer[mergedIndex++] = ' ';  // 合并为一个空格
+
+### 词法分析
+
+#### 输入输出
+
+> 计划采取命令行和直接无参输入文件名两种方式，先写个架子，架子
+
+```c
+#include <stdio.h>
+#include <string.h>
+#define MAXFILENAME 100
+#define BUFFERSIZE 1024
+
+int inSingleLineComment = 0;
+int inMultiLineComment = 0;
+
+// 消除注释
+void removeComments(char *source, char *destination) {
+    int i, j;
+    int len = strlen(source);
+
+    for (i = 0, j = 0; i < len; i++) {
+        if (!inSingleLineComment && !inMultiLineComment) {
+            if (source[i] == '/' && source[i + 1] == '/') {
+                inSingleLineComment = 1;
+                i++; // 跳过第二个斜杠
+            } else if (source[i] == '(' && source[i + 1] == '*') {
+                inMultiLineComment = 1;
+                i++; // 跳过第二个星号
             } else {
-                mergedBuffer[mergedIndex++] = currentChar;  // 非空白符，直接复制
+                destination[j++] = source[i];
+            }
+        } else if (inSingleLineComment && source[i] == '\n') {
+            inSingleLineComment = 0;
+        } else if (inMultiLineComment && source[i] == '*' && source[i + 1] == ')') {
+            inMultiLineComment = 0;
+            i++; // 跳过第二个括号
+        }
+    }
+
+    destination[j] = '\0'; // 在目标字符串末尾添加结束符
+}
+
+// 合并空白符
+void mergeWhitespace(char *source, char *destination) {
+    int i, j;
+    int len = strlen(source);
+    int isWhitespace = 0; // 用于标记前一个字符是否是空白符
+
+    for (i = 0, j = 0; i < len; i++) {
+        if (source[i] == ' ' || source[i] == '\t' || source[i] == '\n' || source[i] == '\r') {
+            if (!isWhitespace) {
+                destination[j++] = ' ';
+                isWhitespace = 1;
+            }
+        } else {
+            destination[j++] = source[i];
+            isWhitespace = 0;
+        }
+    }
+
+    destination[j] = '\0'; // 在目标字符串末尾添加结束符
+}
+
+
+int main(int argc, char *argv[]) {
+    //得到文件名
+    FILE *file;
+    FILE *preFile;
+    char fileName[MAXFILENAME];
+    char preFileName[MAXFILENAME+2];
+    if(argc > 1) {
+        strcpy(fileName, argv[1]);
+    } else {
+        printf("请输入要分析的文件名:\n");
+        scanf("%99s",fileName);
+    }
+    //puts(fileName);
+    //printf("%s",fileName);
+
+    //打开获取的文件
+    file = fopen(fileName,"rw");
+    if(file == NULL) {
+        printf("无法打开文件 %s\n",fileName);
+        return 1;
+    }
+
+    //构造输出文件名
+    char *lastDot = strrchr(fileName, '.');
+    if(lastDot != NULL) {
+        // 将最后一个点以及后面的内容替换为".i"
+        sprintf(preFileName, "%.*s.i", (int)(lastDot - fileName), fileName);
+    } else {
+        //没找到直接追加".i"
+        sprintf(preFileName, "%s.i", fileName);
+    }
+    //puts(preFileName);
+
+    //打开输出文件
+    preFile = fopen(preFileName,"w");
+    //preFile =
+    //fopen("11","w");灵异事件，不知道为什么执行过一遍这条语句后，所有文件均能以写入打开了！？
+    if (preFile == NULL) {
+        printf("无法创建输出文件 %s\n",preFileName);
+        fclose(file);
+        return 1;
+    }
+    //printf("成功创建了文件");
+
+    //执行不断从文件中读入数据到内存中处理，预处理的主要步骤
+    //主要进行注释删除以及空格合并
+    //这里fgets函数是整行读取，与注释格式冲突，出现bug
+    /*char inputBuffer[1024],outputBuffer[1024];
+    int BUFFER_SIZE = 1024;
+    while (fgets(inputBuffer, BUFFER_SIZE, file) != NULL) {
+        removeComments(inputBuffer,outputBuffer);
+        mergeWhitespace(outputBuffer,outputBuffer);
+        fputs(outputBuffer, preFile);
+    }*/
+
+    char inputBuffer[BUFFERSIZE],outputBuffer[BUFFERSIZE];
+    char ch;
+    int index = 0;
+    while (ch = fgetc(file)) {
+        if (index == BUFFERSIZE) {
+            index = 0;
+            removeComments(inputBuffer,outputBuffer);
+            mergeWhitespace(outputBuffer,outputBuffer);
+            fputs(outputBuffer,preFile);
+        } else if (ch == EOF){
+            index = 0;
+            removeComments(inputBuffer,outputBuffer);
+            mergeWhitespace(outputBuffer,outputBuffer);
+            fputs(outputBuffer,preFile);
+            break;
+        }else {
+            inputBuffer[index++] = ch;
+        }
+    } 
+
+    //关闭文件流
+    fclose(file);
+    fclose(preFile);
+    //printf("预处理完成,处理结果已写入文件 %s\n",preFileName);
+
+    return 0;
+}
+```
+
+#### 数据类型定义
+
+```c
+// 定义单词种别的字符串表示数组
+const char *categoryStrings[] = {
+    "IDENTIFIER",    // 标识符
+    "CONSTANT",      // 常数
+    "OPERATOR_ADD",  // 加法运算符 '+'
+    "OPERATOR_SUB",  // 减法运算符 '-'
+    "OPERATOR_MUL",  // 乘法运算符 '*'
+    "OPERATOR_DIV",  // 除法运算符 '/'
+    "OPERATOR_EQ",   // 等号 '='
+    "OPERATOR_NE",   // 不等号 '#'
+    "OPERATOR_LT",   // 小于 '<'
+    "OPERATOR_GT",   // 大于 '>'
+    "OPERATOR_ASSIGN", // 赋值运算符 ':='
+    "DELIMITER_LPAREN", // 左括号 '('
+    "DELIMITER_RPAREN", // 右括号 ')'
+    "DELIMITER_COMMA",  // 逗号 ','
+    "DELIMITER_PERIOD", // 句号 '.'
+    "DELIMITER_SEMICOLON", // 分号 ';'
+    "KEYWORD_BEGIN",   // begin
+    "KEYWORD_END",     // end
+    "KEYWORD_IF",      // if
+    "KEYWORD_THEN",    // then
+    "KEYWORD_WHILE",   // while
+    "KEYWORD_DO",      // do
+    "KEYWORD_CONST",   // const
+    "KEYWORD_VAR",     // var
+    "KEYWORD_CALL",    // call
+    "KEYWORD_PROCEDURE", // procedure
+    "KEYWORD_ODD"      // odd
+};
+
+// 定义单词种别
+typedef enum {
+    IDENTIFIER,       // 标识符
+    CONSTANT,         // 常数
+    OPERATOR_ADD,     // 加法运算符 '+'
+    OPERATOR_SUB,     // 减法运算符 '-'
+    OPERATOR_MUL,     // 乘法运算符 '*'
+    OPERATOR_DIV,     // 除法运算符 '/'
+    OPERATOR_EQ,      // 等号 '='
+    OPERATOR_NE,      // 不等号 '#'
+    OPERATOR_LT,      // 小于 '<'
+    OPERATOR_GT,      // 大于 '>'
+    OPERATOR_ASSIGN,  // 赋值运算符 ':='
+    DELIMITER_LPAREN, // 左括号 '('
+    DELIMITER_RPAREN, // 右括号 ')'
+    DELIMITER_COMMA,  // 逗号 ','
+    DELIMITER_PERIOD, // 句号 '.'
+    DELIMITER_SEMICOLON, // 分号 ';'
+    KEYWORD_BEGIN,    // begin
+    KEYWORD_END,      // end
+    KEYWORD_IF,       // if
+    KEYWORD_THEN,     // then
+    KEYWORD_WHILE,    // while
+    KEYWORD_DO,       // do
+    KEYWORD_CONST,    // const
+    KEYWORD_VAR,      // var
+    KEYWORD_CALL,     // call
+    KEYWORD_PROCEDURE,// procedure
+    KEYWORD_ODD       // odd
+} Category;
+
+// 定义单词符号结构体
+typedef struct {
+    Category category;  // 单词的种别
+    int attribute;      // 属性值，可以根据需要选择合适的数据类型
+} Token;
+
+// 定义打印单词符号的函数
+/*void printToken(Token token) {
+    printf("(%d, %d)\n", token.category, token.attribute);
+}*/
+// 定义打印单词符号的函数
+void printToken(Token token) {
+    printf("(%s, %d)\n", categoryStrings[token.category], token.attribute);
+}
 ```
 
 
-
-
-
-### 代码修改
 
 1.保留字提示改成关键字
 
