--- a/source/_posts/编译原理.md
+++ b/source/_posts/编译原理.md
@@ -9,4 +9,11 @@ categories:
 
 <!--more-->
 
-词法分析：
+词法分析，语法分析，语义分析，抽象语法树生成
+
+说明什么的都在这里了：
+
+```bash
+git clone git@github.com:dingdingqiuqiu/PL0.git
+```
+
