--- a/source/_posts/计网-知识整理.md
+++ b/source/_posts/计网-知识整理.md
@@ -54,7 +54,7 @@ BID分为两部分：优先级和基本Mac地址。
 5. stp root secondary把优先级改到4096,默认是32768。最高优先级是0.使用stp root primary配置
 6. blocking就是阻塞状态，forwarding状态就是启用状态。
 
-![image-20241115155631028](../../../../../OneDrive/图片/Blog/计网-知识整理/image-20241115155631028.png)
+![image-20241115155631028](https://dlink.host/1drv/aHR0cHM6Ly8xZHJ2Lm1zL2kvYy9mYmQ0NGEwNjM2YTQyNDJlL0VWNFRrdGdaNlc1TXNING5kdTFxX0hrQnZySXhsQ3JsMjc0YlE3S2t6a3NVR2c_ZT1XbkNOS0w.jpg)
 
 ## 路由支持
 
